# shells

./: README.md  build.sh  make.py  pyproject.toml  templates
bind/connector/: socat-ssl.bat  socat-ssl.sh  socat-tcp.bat  socat-tcp.sh
bind/listener/: powercat.ps1  powershell-tcp.ps1  socat-ssl.bat  socat-ssl.sh  socat-tcp.bat  socat-tcp.sh
dropper/: memfd-create.py  mmap-ctype.py  simple.bat  simple.sh
genshell/: main.py
genshell/templates/exec/: memfd-create.pl  memfd-create.py  mmap-ctype.py  simple.sh
genshell/templates/web/: complex.php  kraken.txt  read-file.php  (+2 more)
getshell/: main.py
reverse/connector/: aspx-tcp.aspx  awk-tcp.sh  bash-daemonized.sh  bash-tcp-background-loop.sh  bash-tcp.sh  bash-udp.sh  cosmopolitan.c  go-tcp.go  go-tcp.sh  java-tcp-bash.java  java-tcp-class.java  java-tcp-jar.java  java-tcp.java  jsp-tcp-alt.jsp  jsp-tcp.jsp  lua-tcp-short.lua  lua-tcp.sh  meterpreter-linux-http.sh  meterpreter-windows-http.sh  msfvenom-jsp-tcp.sh  msfvenom-linux-tcp.sh  msfvenom-windows-tcp.sh  netcat-bsd-tcp-alt.sh  netcat-bsd-tcp.sh  netcat-gnu-tcp.sh  nodejs-nc.js  openssl-tls.sh  perl-tcp-cgi.pl  perl-tcp-short.pl  perl-tcp.pl  php-tcp-alt.php  php-tcp-short.php  php-tcp.php  powercat.ps1  powershel-tcp.ps1  powershell-conpty.ps1  powershell-tcp.ps1  python-linux-tcp.py  python-pty-tcp.py  python-windows-tcp.py  (+7 more)
reverse/listener/: meterpreter-linux-http.sh  meterpreter-windows-http.sh  netcat.sh  openssl.sh  python.py  rlwrap.sh  socat-ssl.sh  socat-tcp-readline.sh  socat-tcp-tty.sh  socat-tcp.sh
web/: README.md  simple.aspx  simple.php  tiny.jsp
(+104 files in other folders)
