[tool.poetry]
name = "getshell"
version = "0.5.2"
description = "Web, bind and reverse shell generator"
authors = ["dadevel <dadevel@disroot.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "getshell"}]

[tool.poetry.scripts]
getshell = "getshell.main:main"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
